--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /* Global CSS Start */
 
 * {
@@ -16,7 +15,7 @@ body {
     padding: 0;
     margin: 0;
     word-break: break-word;
-    background-color: #0e063d;
+    background-color: #000;
 }
 
 h1,
@@ -102,7 +101,224 @@ img {
     margin-bottom: 35px;
 }
 
+
+/*
+
+ https://preview.themeforest.net/item/eightsy-billiard-school-sport-club-elementor-template-kit/full_screen_preview/35427626?_ga=2.178571309.84875571.1727330022-154049816.1719381000&_gac=1.24162376.1726467419.Cj0KCQjwi5q3BhCiARIsAJCfuZm8hFzgJNDiCWxb7B30YWxnWlj-VjBrRWWavUp2nf5yBualqFnf5sgaAioKEALw_wcB 
+ 
+ */
+
 /* Global CSS End */
+
+
+/*Header CSS Start */
+.logo img {
+    text-align: center;
+    width: 100%;
+    max-width: 300px;
+    vertical-align: middle;
+}
+
+.site-header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 9999;
+    transition: all 0.3s ease-in-out;
+    background-color: #000;
+}
+
+.main-navbar ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.desktop-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px 0;
+}
+
+.main-navbar ul li a {
+    padding: 0 10px;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: capitalize;
+    line-height: normal;
+    font-weight: 600;
+    color: #fff;
+    transition: 0.5s all ease-in-out;
+    border-bottom: solid 1px transparent;
+}
+
+.main-navbar ul li a:after {
+    display: block;
+    content: '';
+    border-bottom: solid 1px #FFBB35;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+    padding-bottom: 5px;
+}
+
+.main-navbar ul li a:hover:after,
+.main-navbar ul li a.active:after {
+    transform: scaleX(1);
+}
+
+.contact-us-btn {
+    color: #000;
+        display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: capitalize;
+    line-height: normal;
+    font-weight: 600;
+    position: relative;
+    border-radius: 30px;
+    background-color: #FFBB35;
+    padding: 15px 30px;
+}
+
+.contact-us-btn:hover {
+    background-color: #fff;
+    color: #FFBB35;
+    transform: translateY(-3px);
+}
+
+.close-icon {
+    display: none;
+}
+
+.menu-icon {
+    display: none;
+    color: #00fadf;
+    width: 30px;
+    text-align: right;
+    cursor: pointer;
+    margin: auto 0;
+    font-size: 25px;
+    z-index: 60;
+}
+
+.butn {
+    display: inline-block;
+    padding: 15px 35px;
+    font-size: 16px;
+    outline: none;
+    font-weight: 600;
+    border: 1px solid transparent;
+    transition: 0.3s all ease-in-out;
+    line-height: 20px;
+}
+
+.desktop-hide {
+    display: none !important;
+}
+
+
+
+/* Header CSS End */
+
+/* Section Heading CSS Start */
+h2.section-heading {
+    font-size: 40px;
+    line-height: 1.5;
+    color: #FFBB35;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* Section Heading CSS End */
+
+/* Banner Section CSS Start */
+.banner {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.banner-image {
+    height: 600px;
+    width: 100%;
+}
+
+.banner-image img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+    object-position: 0% 0%;
+}
+.banner-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0 0 0/65%);
+    background-blend-mode: multiply;
+    overflow: hidden;
+    text-align: center;
+}
+
+.banner-text h1 {
+    font-size: 70px;
+    color: #fff;
+    display: block;
+    font-weight: 600;
+    text-transform: capitalize;
+    overflow: hidden;
+}
+
+.banner-text h3 {
+    font-size: 25px;
+    color: #fff;
+    display: block;
+    font-weight: 600;
+    text-transform: capitalize;
+    max-width: 1000px;
+    margin: 0 auto;
+    line-height: 1.5;
+    margin-top: 15px;
+    overflow: hidden;
+
+}
+
+
+/* Banner Section  CSS End */
+
+
+/* Home Page Intro Text CSS Start */
+
+.pages-intro-text-wrapper {
+    max-width: 1150px;
+    margin: 0 auto;
+    padding: 0 20px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.pages-intro-text-wrapper p {
+    margin-bottom: 10px;
+    text-align: center;
+    color: #fff;
+}
+
+/* Home Page Intro Text CSS End */
+
 
 
 
@@ -202,7 +418,7 @@ img {
     padding: 8px 0;
     border: 1px solid transparent;
     border-radius: 4px;
-    background-color:#00FADF;
+    background-color: #00FADF;
     color: #000;
     cursor: pointer;
     transition: all 0.7s ease;
@@ -211,7 +427,7 @@ img {
 
 .button:hover {
     border-color: #fff;
-      background-color: #fff;
+    background-color: #fff;
 }
 
 /* Cookies CSS End */
