--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,10 @@ img {
     color: #FFBB35;
     transform: translateY(-3px);
 }
+.phone {
+    margin-right: 20px;
+    vertical-align: middle;
+}
 
 .close-icon {
     display: none;
@@ -248,7 +252,7 @@ h2.section-heading {
 }
 
 .banner-image {
-    height: 600px;
+    height: 550px;
     width: 100%;
 }
 
@@ -256,7 +260,7 @@ h2.section-heading {
     height: 100%;
     object-fit: cover;
     width: 100%;
-    object-position: 0% 0%;
+    object-position: center;
 }
 .banner-text {
     position: absolute;
@@ -292,7 +296,6 @@ h2.section-heading {
     max-width: 1000px;
     margin: 0 auto;
     line-height: 1.5;
-    margin-top: 15px;
     overflow: hidden;
 
 }
