--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,9 +299,106 @@ h2.section-heading {
     overflow: hidden;
 
 }
-
-
 /* Banner Section  CSS End */
+
+/* Home Page Sign Up Section Start */
+.form-section {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.form-image {
+    width: 40%;
+    overflow: hidden;
+}
+
+.form-image img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+}
+
+.form-container {
+    width: 60%;
+    padding: 20px;
+    background-image: url("../images/form-bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0 0 0/50%);
+    background-blend-mode: multiply;
+}
+.form-wrapper {
+    height: 100%;
+    width: 100%;
+}
+.home-signup-wrapper h3{
+    color: #fff;
+}
+
+
+
+
+.form-section  h2 {
+    margin-bottom: 10px;
+    font-size: 36px;
+    color: #FFBB35;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  label {
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+
+  input {
+    width: 60%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #fff;
+  }
+
+  button {
+    padding: 10px;
+    background-color: #FFBB35;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: all 0.4s ease-in-out;
+    width: 30%;
+  }
+
+  button:hover {
+    background-color: #fff;
+    color: #FFBB35;
+    transform: translateY(-1px);
+  }
+  .form-container p {
+    color: #fff;
+    margin-top: 10px;
+}
+.form-container p a {
+    color: #FFBB35;
+    margin-top: 10px;
+    transition: 0.4s all ease-in-out;
+}
+.form-container p a:hover{
+    color: red;
+transform: translateX(2px);
+}
+
+/* Home Page Sign Up Section End */
+
 
 
 /* Home Page Intro Text CSS Start */
