--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 /* Global CSS Start */
 
 * {
@@ -11,7 +14,7 @@ html {
 }
 
 body {
-    font-family: "Raleway", sans-serif;
+    font-family: "Noto Sans", sans-serif;
     padding: 0;
     margin: 0;
     word-break: break-word;
@@ -50,13 +53,13 @@ ul li {
 a {
     display: inline-block;
     text-decoration: none;
-    font-family: "Raleway", sans-serif;
+   font-family: "Noto Sans", sans-serif;
 }
 
 button,
 input[type=text],
 input[type=submit] {
-    font-family: "Raleway", sans-serif;
+   font-family: "Noto Sans", sans-serif;
 }
 
 img {
@@ -302,10 +305,25 @@ h2.section-heading {
 /* Banner Section  CSS End */
 
 /* Home Page Sign Up Section Start */
+.home-page-signup-section{
+    background-image: url("../images/home-signup-bg.jpg");  
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0 0 0/50%);
+    background-blend-mode: multiply;
+}
+
+
+
 .form-section {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    box-shadow: #FFBB35 0px 4px 8px;
+    padding: 20px;
 }
 
 .form-image {
@@ -332,13 +350,14 @@ h2.section-heading {
     height: 100%;
     width: 100%;
 }
-.home-signup-wrapper h3{
+.home-signup-wrapper h3 {
     color: #fff;
+    font-size: 30px;
+    max-width: 850px;
+    margin: 0 auto;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
 }
-
-
-
-
 .form-section  h2 {
     margin-bottom: 10px;
     font-size: 36px;
