--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,13 +568,29 @@ img.next-page-image {
     margin: 0 auto;
     text-align: center;
 }
-
-
-
-
 /* Home Featured Cards CSS End*/
 
-
+.home-images-gallery-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.home-gallery-images {
+    width: 32%;
+    height: 350px;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+.home-gallery-images img {
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border: 5px solid #fff;
+    transition: 0.5s all ease-in-out;
+}
+.home-gallery-images img:hover{
+    transform: scale(1.1);
+}
 
 /* Social Icons CSS Start */
 .social-icons {
