--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ a {
     font-family: "Noto Sans", sans-serif;
 }
 
-button,
+button,textarea,
 input[type=text],
 input[type=submit] {
     font-family: "Noto Sans", sans-serif;
@@ -444,6 +444,10 @@ button:hover {
     color: red;
     transform: translateX(2px);
 }
+.login-icon,.submit-icon{
+    font-size:16px;
+    margin-left: 7px;
+}
 
 /* Home Page Sign Up Section End */
 
@@ -528,10 +532,12 @@ button:hover {
     min-height: 200px;
     position: relative;
 }
+
 img.next-page-image {
     height: 30px;
     width: 30px;
 }
+
 .target-page {
     position: absolute;
     top: 10px;
@@ -568,39 +574,137 @@ img.next-page-image {
     margin: 0 auto;
     text-align: center;
 }
+
 /* Home Featured Cards CSS End*/
 
+/* Home Image Gallery CSS Start */
 .home-images-gallery-wrapper {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     transition: 0.3s all ease-in-out;
 }
+
 .home-images-gallery-wrapper:hover img {
     filter: blur(5px);
 }
+
 .home-gallery-images {
     width: 32%;
     height: 400px;
     overflow: hidden;
     margin-bottom: 30px;
 }
+
 .home-gallery-images img {
     width: 100%;
-    height:100%;
+    height: 100%;
     object-fit: cover;
     border: 5px solid #fff;
     transition: 0.5s all ease-in-out;
-    transition: all 0.3s ease; 
+    transition: all 0.3s ease;
     filter: blur(0);
 }
-.home-gallery-images:first-child,.home-gallery-images:last-child{
+
+.home-gallery-images:first-child,
+.home-gallery-images:last-child {
     width: 100%;
 }
-.home-gallery-images img:hover{
+
+.home-gallery-images img:hover {
     transform: scale(1.1);
     filter: blur(0);
 }
+
+/* Home Image Gallery CSS End */
+
+/* Home Contact Us Form CSS Start */
+.contact-form-section{
+    background-image: url("../images/contact-form-section-bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(0 0 0/60%);
+    background-blend-mode: multiply;
+    isolation: isolate;
+}
+
+form.contact-form {
+    max-width: 700px;
+    margin: 0 auto;
+    padding:30px 20px;
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+}
+
+.formbold-form-input {
+    width: 100%;
+    padding: 12px 24px;
+    border-radius: 6px;
+    border: 1px solid #e0e0e0;
+    background: white;
+    font-weight: 500;
+    font-size: 16px;
+    color: #6b7280;
+    outline: none;
+    resize: none;
+}
+
+.formbold-form-input:focus {
+    border-color: #FFBB35;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+}
+
+.formbold-btn {
+    text-align: center;
+    font-size: 16px;
+    border-radius: 6px;
+    padding: 14px 32px;
+    border: none;
+    font-weight: 600;
+    background-color: #FFBB35;
+    color: #000;
+    cursor: pointer;
+    margin-top: 15px;
+    transition: 0.3s all ease-in;
+}
+
+.formbold-btn:hover {
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+    transform:translateY(-3px) ;
+}
+
+.formbold--mx-3 {
+    margin-left: -12px;
+    margin-right: -12px;
+}
+
+.formbold-px-3 {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.w-full {
+    width: 100%;
+}
+
+
+
+
+
+
+
+/* Home Contact Us Form CSS End */
+
 /* Social Icons CSS Start */
 .social-icons {
     text-align: center;
