--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,8 @@ a {
     font-family: "Noto Sans", sans-serif;
 }
 
-button,textarea,
+button,
+textarea,
 input[type=text],
 input[type=submit] {
     font-family: "Noto Sans", sans-serif;
@@ -444,8 +445,10 @@ button:hover {
     color: red;
     transform: translateX(2px);
 }
-.login-icon,.submit-icon{
-    font-size:16px;
+
+.login-icon,
+.submit-icon {
+    font-size: 16px;
     margin-left: 7px;
 }
 
@@ -619,7 +622,7 @@ img.next-page-image {
 /* Home Image Gallery CSS End */
 
 /* Home Contact Us Form CSS Start */
-.contact-form-section{
+.contact-form-section {
     background-image: url("../images/contact-form-section-bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -632,7 +635,7 @@ img.next-page-image {
 form.contact-form {
     max-width: 600px;
     margin: 0 auto;
-    padding:30px 20px;
+    padding: 30px 20px;
     background-color: transparent;
     backdrop-filter: blur(10px);
     border-radius: 10px;
@@ -672,7 +675,7 @@ form.contact-form {
 
 .formbold-btn:hover {
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
-    transform:translateY(-3px) ;
+    transform: translateY(-3px);
 }
 
 .formbold--mx-3 {
@@ -696,7 +699,161 @@ form.contact-form {
 .w-full {
     width: 100%;
 }
+
 /* Home Contact Us Form CSS End */
+
+/* Discalimer CSS Start */
+
+.disclaimer {
+    background-image: url("../images/disclaimer-bg.png");
+    background-repeat: no-repeat;
+    background-color: rgb(0 0 0/50%);
+    background-blend-mode: multiply;
+    background-size: cover;
+}
+
+.disclaimer-wrapper h3 {
+    color: #FFBB35;
+    font-size: 30px;
+}
+
+.disclaimer-wrapper {
+    padding: 15px;
+}
+
+.disclaimer-wrapper p {
+    color: #fff;
+    margin-bottom: 10px;
+    line-height: 1.7;
+}
+
+.disclaimer-wrapper p a {
+    color: #FFBB35;
+    transition: 0.3s all ease-in-out;
+}
+
+.disclaimer-wrapper p a:hover {
+    color: rgb(255 0 0);
+    transform: translateX(3px);
+}
+
+span.heading-like {
+    font-weight: 700;
+    color: #FFBB35;
+    margin-right: 5px;
+}
+
+/* Discalimer CSS End */
+
+
+
+/* Footer CSS Start */
+.footer {
+    width: 100%;
+    background-image: url("../images/footer-bg.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    overflow: hidden;
+    width: 100%;
+}
+
+.logo-bottom img {
+    width: 100%;
+    max-width: 300px;
+}
+
+.logo-bottom a {
+    width: 100%;
+}
+
+.footer-items {
+    width: 30%;
+}
+
+.footer-items h3 {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 12px;
+    text-align: center;
+    color:#FFBB35;
+}
+
+.footer-links h3 {
+    text-align: left;
+}
+
+.footer-items .social-icons {
+    width: 100%;
+    margin: 15px auto;
+}
+
+
+.footer-items ul li a {
+    padding: 3px 0;
+}
+
+.footer .footer-items ul li a {
+    transition: 0.6s all ease;
+    font-size: 17px;
+    position: relative;
+    color: #fff;
+}
+
+.footer .footer-items ul li a:hover {
+    color:#FFBB35;
+}
+
+
+.footer .footer-items ul li a:after {
+    display: block;
+    content: '';
+    border-bottom: solid 1px #FFBB35;
+    transition: all 300ms ease-in-out;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 0%;
+}
+
+.footer-items ul li a:hover:after {
+    width: 100%;
+}
+
+.footer .footer-items ul li a:hover {
+    transform: translateX(3px);
+}
+
+.footer-icons {
+    min-width: 20px;
+    margin-right: 6px;
+}
+
+.copyright {
+    padding: 15px 0;
+    text-align: center;
+    margin: auto 0;
+    border-top: 1px solid #FFBB35;
+}
+
+.copyright p {
+    color: #fff;
+    text-align: center;
+}
+
+.ssl-certificate img {
+    max-width: 160px;
+}
+
+/* Footer CSS End */
 
 /* Social Icons CSS Start */
 .social-icons {
@@ -752,6 +909,12 @@ form.contact-form {
 /* Social Icons CSS End */
 
 
+
+
+
+
+
+
 /* Cookies CSS Start */
 .wrapper {
     position: fixed;
@@ -761,6 +924,7 @@ form.contact-form {
     padding: 15px 25px 22px;
     transition: all 1s ease-in-out;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border: 5px solid #FFBB35;
 }
 
 .wrapper.show {
@@ -793,7 +957,7 @@ form.contact-form {
     padding: 8px 0;
     border: 1px solid transparent;
     border-radius: 4px;
-    background-color: #00FADF;
+    background-color: #FFBB35;
     color: #000;
     cursor: pointer;
     transition: all 0.7s ease;
