--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -836,6 +836,9 @@ span.heading-like {
     min-width: 20px;
     margin-right: 6px;
 }
+.footer-arrow{
+    margin-right: 7px;
+}
 
 .copyright {
     padding: 15px 0;
@@ -907,6 +910,88 @@ span.heading-like {
 }
 
 /* Social Icons CSS End */
+
+
+/* Sub Pages CSS Start */
+.sub-pages span.heading-like {
+    color: #FFBB35;
+    font-weight: 700;
+    font-size: 17px;
+}
+
+.sub-pages-content-section {
+    background-image: url("../images/sub-pages-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
+.sub-pages-group {
+    margin-bottom: 35px;
+    padding: 20px;
+    box-shadow: 0px 0px 4px 3px #FFBB35;
+    border-radius: 10px;
+}
+
+.sub-pages-group:last-child {
+    margin-bottom: 0px;
+}
+
+.sub-pages-group h3 {
+    font-size: 27px;
+    margin-bottom: 10px;
+    color: #FFBB35;
+}
+
+.sub-pages-group h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.sub-pages-group p {
+    margin-bottom: 10px;
+    font-size: 17px;
+    font-weight: 500;
+    color: #fff;
+}
+
+.sub-pages-group ul li {
+    margin-bottom: 10px;
+    list-style-type: disc;
+    margin-left: 17px;
+    color: #ffff;
+}
+
+.sub-pages-group h3 a {
+    color: #FFBB35;
+    transition: 0.3s all ease-in-out;
+}
+
+.sub-pages-group h3 a:hover {
+    color: red;
+    transform: translateX(2px);
+}
+
+.sub-pages-group p a {
+    color: #FFBB35;
+    font-weight: 600;
+    font-size: 17px;
+    transition: 0.3s all ease-in-out;
+}
+
+.sub-pages-group p a:hover {
+    color: blue;
+    transform: translateX(2px);
+}
+
+.sub-pages-group ul {
+    margin: 10px auto;
+}
+
+/* Sub Pages CSS End */
 
 
 
