--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,36 +1,24 @@
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1200px) {}
 
+@media screen and (max-width:991px) {}
+
+
+
+
+@media screen and (max-width:767px) {}
+
+@media screen and (max-width:575px) {
+    #accordion-wrapper {
+        box-sizing: border-box;
+        transform: translate(0, 0);
+        max-width: 100%;
+        min-height: 100%;
+        margin: 0;
+        left: 0;
+    }
 
 
 }
 
-@media screen and (max-width:991px) {
-  
 
-   
-
-}
-
-
-
-
-@media screen and (max-width:767px) {
-   
-     
-
-   
-  
-  
-
-}
-
-@media screen and (max-width:575px) {  
-   
-  
-}
-
-
-@media screen and (max-width:480px) {  
-   
-  
-}
+@media screen and (max-width:480px) {}
