--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -132,6 +132,8 @@
     .formbold-btn {
         padding: 12px 15px;
         width: 50%;
+    }.home-advantage-cards {
+        min-height: 230px;
     }
 
 }
