--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1016,6 +1016,9 @@ span.heading-like {
     padding: 20px;
     border-radius: 15px;
 }
+.tournaments-events-cards:last-child{
+    margin-bottom: 0;
+}
 
 .tornaments-events-cards-image {
     width: 40%;
