--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,23 +14,23 @@
         flex-direction: column;
         justify-content: center;
         overflow: hidden;
-     }
-  
-     .menuToggle .main-navbar {
+    }
+
+    .menuToggle .main-navbar {
         transform: translateY(0);
         justify-content: flex-start;
-     }
-  
-     .main-navbar ul {
+    }
+
+    .main-navbar ul {
         flex-direction: column;
-  
-     }
-  
-     .menu-icon {
+
+    }
+
+    .menu-icon {
         display: block;
-     }
-  
-     .close-icon {
+    }
+
+    .close-icon {
         position: absolute;
         top: 20px;
         right: 20px;
@@ -38,36 +38,45 @@
         color: #fff;
         text-align: end;
         z-index: 55;
-     }
-  
-     .logo img {
+    }
+
+    .logo img {
         max-width: 200px;
-     }
-     a.mobile-hide {
+    }
+
+    a.mobile-hide {
         display: none;
     }
+
     a.desktop-hide.butn {
         display: block !important;
     }
+
     .banner-text h1 {
         font-size: 55px;
     }
+
     .banner-text h3 {
         font-size: 23px;
     }
+
     .banner-image {
         height: 450px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 25px;
     }
+
     h2.section-heading {
         font-size: 50px;
-     }
-     .formbold-btn {
+    }
+
+    .formbold-btn {
         padding: 12px 15px;
         width: 40%;
     }
+
     .home-advantage-cards {
         margin-bottom: 30px;
         min-height: 230px;
@@ -79,65 +88,98 @@
     .banner-image {
         height: 370px;
     }
+
     .pages-intro-text-wrapper p {
         font-size: 15px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 22px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 24px;
     }
+
     h2.section-heading {
         font-size: 45px;
-     }
-     input {
+    }
+
+    input {
         font-size: 15px;
     }
+
     .home-featured-image {
         height: 300px;
     }
+
     .home-featured-text a h3 {
-         font-size: 22px;
+        font-size: 22px;
         max-width: 200px;
         margin: 0 auto;
     }
+
     .disclaimer-wrapper h3 {
         font-size: 28px;
     }
+
     .disclaimer-wrapper p {
         font-size: 15px;
     }
+
     .copyright p {
         font-size: 15px;
     }
+
     .sub-pages-banner-text h1 {
         font-size: 37px;
     }
-    .tornaments-events-cards-image, .tornaments-events-cards-content {
+
+    .tornaments-events-cards-image,
+    .tornaments-events-cards-content {
         width: 100%;
     }
+
     .tornaments-events-cards-content h3 {
         font-size: 28px;
     }
+
     .accordion .bottom .text p {
         font-size: 15px;
     }
+
     .help-us-wrapper p {
         font-size: 14px;
     }
+
     .sub-pages-group h3 {
         font-size: 28px;
     }
+
     .sub-pages-group p a {
         font-size: 16px;
     }
+
     .formbold-btn {
         padding: 12px 15px;
         width: 50%;
-    }.home-advantage-cards {
+    }
+
+    .home-advantage-cards {
         min-height: 230px;
     }
+
+    /* Cookies CSS Start */
+    .info p {
+        font-size: 14px;
+    }
+
+    .button {
+        width: calc(55% / 2 - 10px);
+        font-size: 14px;
+    }
+
+    /* Cookies CSS End */
 
 }
 
@@ -148,99 +190,126 @@
     .banner-text h1 {
         font-size: 50px;
     }
+
     .banner-text h3 {
         font-size: 21px;
     }
+
     .banner-image {
-        height:330px;
+        height: 330px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 21px;
     }
-    .form-image ,.form-container {
+
+    .form-image,
+    .form-container {
         width: 100%;
     }
-    .form-container{
+
+    .form-container {
         padding: 10px;
     }
+
     h2.section-heading {
         font-size: 40px;
-     }
-     .form-section input {
+    }
+
+    .form-section input {
         width: 80%;
     }
+
     .home-featured-image {
         height: 280px;
     }
+
     .home-featured-cards {
         width: 48%;
         margin-bottom: 35px;
     }
+
     .home-featured-cards:last-child {
         width: 100%;
     }
+
     .home-advantage-icons img {
         height: 50px;
         width: 50px;
     }
+
     img.next-page-image {
         height: 20px;
         width: 20px;
     }
+
     .home-advantage-content h3 {
         font-size: 17px;
     }
+
     .home-advantage-cards {
         min-height: 230px;
     }
+
     .home-gallery-images {
         height: 270px;
     }
-    .home-gallery-images:first-child, .home-gallery-images:last-child {
+
+    .home-gallery-images:first-child,
+    .home-gallery-images:last-child {
         height: 240px;
     }
+
     .disclaimer-wrapper h3 {
         font-size: 26px;
     }
+
     .links a {
         margin: 0;
         padding-bottom: 10px;
         display: block;
         font-size: 17px;
-     }
-  
-     .links a:last-child {
+    }
+
+    .links a:last-child {
         padding-bottom: 0;
-     }
-  
-     .links-social {
+    }
+
+    .links-social {
         align-items: flex-start;
-     }
-  
-     .logo-bottom img {
+    }
+
+    .logo-bottom img {
         max-width: 250px;
-     }
-  
-  
-     .footer-items h3 {
+    }
+
+
+    .footer-items h3 {
         font-size: 26px;
-     }
-     .logo-bottom {
+    }
+
+    .logo-bottom {
         width: 100%;
         margin-bottom: 30px;
     }
-    .footer-connect,.footer-links{
+
+    .footer-connect,
+    .footer-links {
         width: 48%;
     }
+
     .footer-items h3 {
         text-align: left;
     }
+
     .social-icons {
         justify-content: left;
-       }
-       .copyright p {
+    }
+
+    .copyright p {
         font-size: 14px;
     }
+
     .sub-pages-banner-text h1 {
         font-size: 35px;
     }
@@ -248,24 +317,46 @@
     .tornaments-events-cards-content {
         padding: 10px 5px;
     }
+
     .tornaments-events-cards-content p {
         font-size: 15px;
     }
+
     .tornaments-events-cards-content h3 {
         font-size: 26px;
     }
+
     .accordion .top .text {
         font-size: 16px;
     }
+
     .sub-pages-group h3 {
         font-size: 26px;
     }
+
     .contact-page .form-section input {
         width: 100%;
     }
+
     .contact-page .form-section button {
         width: 40%;
     }
+
+    /* Cookies CSS Start */
+    .wrapper {
+        padding: 20px 10px;
+    }
+
+    .info p {
+        font-size: 13px;
+    }
+
+    .button {
+        font-size: 13px;
+        padding: 6px;
+    }
+
+    /* Cookies CSS End */
 
 }
 
@@ -273,97 +364,137 @@
     .banner-text h1 {
         font-size: 45px;
     }
+
     .banner-text h3 {
         font-size: 19px;
     }
+
     .banner-image {
         height: 290px;
     }
+
     .pages-intro-text-wrapper {
         padding: 0;
     }
+
     .pages-intro-text-wrapper p {
         font-size: 14px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 18px;
     }
+
     h2.section-heading {
         font-size: 35px;
     }
 
-     input {
+    input {
         font-size: 14px;
     }
+
     .form-section input {
         width: 100%;
     }
+
     .form-section {
         padding: 10px;
     }
+
     .home-featured-cards {
         width: 100%;
         margin-bottom: 35px;
     }
+
     .home-featured-image {
         height: 260px;
     }
+
     .home-advantage-cards {
         width: 48%;
         min-height: 250px;
     }
+
     .home-gallery-images {
         width: 100%;
         height: 260px;
     }
+
     form.contact-form {
         padding: 20px 10px;
     }
+
     .formbold-btn {
         width: 35%;
     }
+
     .disclaimer-wrapper h3 {
         font-size: 24px;
     }
+
     .disclaimer-wrapper p {
         font-size: 14px;
     }
+
     .copyright p {
         font-size: 13px;
     }
+
     .footer .footer-items ul li a {
         font-size: 15px;
     }
+
     .sub-pages-banner-text h1 {
         font-size: 32px;
     }
+
     .tornaments-events-cards-content p {
         font-size: 14px;
     }
+
     .tornaments-events-cards-content h3 {
         font-size: 24px;
     }
+
     .accordion .top .text {
         font-size: 15px;
     }
+
     .accordion .bottom .text p {
         font-size: 14px;
     }
+
     .help-us-wrapper p {
         font-size: 14px;
     }
+
     .sub-pages-group h3 {
         font-size: 24px;
     }
+
     .sub-pages-group p a {
         font-size: 15px;
     }
+
     .contact-page form.contact-form {
         padding: 20px 0px;
     }
+
     .contact-page .form-container {
         padding: 10px 0px;
     }
+
+    /* Cookies CSS Start */
+    .info p {
+        font-size: 13px;
+    }
+
+    .button {
+        width: calc(70% / 2 - 10px);
+        font-size: 13px;
+    }
+
+    /* Cookies CSS End */
 
 
 }
@@ -373,92 +504,131 @@
     .banner-text h1 {
         font-size: 40px;
     }
+
     .banner-text h3 {
         font-size: 17px;
     }
+
     .banner-image {
         height: 230px;
     }
+
     .home-signup-wrapper h3 {
         font-size: 15px;
     }
+
     .form-section h2 {
         font-size: 26px;
     }
+
     h2.section-heading {
         font-size: 27px;
     }
+
     .form-section button {
         width: 50%;
     }
+
     .home-featured-image {
         height: 230px;
     }
+
     .home-featured-text a h3 {
         font-size: 22px;
     }
+
     .home-advantage-cards {
         width: 100%;
         min-height: 170px;
     }
+
     .home-gallery-images {
-          height: 220px;
+        height: 220px;
     }
+
     .formbold-btn {
         padding: 10px 32px;
         width: 55%;
     }
+
     .disclaimer-wrapper h3 {
         font-size: 22px;
     }
+
     .footer-items {
         width: 100%;
         margin-bottom: 30px;
-     }
-  
-     .footer-items:last-child {
+    }
+
+    .footer-items:last-child {
         margin-bottom: 0;
-     }
-  
-     .footer-items h3 {
+    }
+
+    .footer-items h3 {
         text-align: left;
-     }
-  
-     .social-icons {
+    }
+
+    .social-icons {
         justify-content: flex-start;
-     }
-  
-     .logo-bottom img {
+    }
+
+    .logo-bottom img {
         max-width: 200px;
-     }
-     .copyright p {
+    }
+
+    .copyright p {
         font-size: 12px;
     }
+
     .sub-pages-banner-text h1 {
         font-size: 27px;
         max-width: 300px;
     }
+
     .tornaments-events-cards-content ul li p img {
         width: 20px;
         height: 20px;
     }
+
     .tornaments-events-cards-content p {
         font-size: 13px;
     }
+
     .tornaments-events-cards-content h3 {
         font-size: 22px;
     }
+
     .accordion .top .text {
         font-size: 14px;
     }
+
     .sub-pages-group p {
         font-size: 14px;
     }
+
     .sub-pages-group h3 {
         font-size: 20px;
     }
+
     .contact-page .form-section button {
         width: 70%;
     }
+
+    /* Cookies CSS Start */
+    .info p {
+        font-size: 12px;
+    }
+
+    .buttons {
+        gap: 10px;
+    }
+
+    .button {
+        width: calc(100% / 2 - 10px);
+        font-size: 13px;
+    }
+
+    /* Cookies CSS End */
+
 
 }
